@@ -1,0 +1,26 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/deprecated_metagenomeSeq_function.R
+\docType{package}
+\name{metagenomeSeq-deprecated}
+\alias{deprecated_metagenomeSeq_function}
+\alias{fitMeta}
+\alias{metagenomeSeq-deprecated}
+\alias{metagenomeSeq-deprecated-package}
+\title{Depcrecated functions in the metagenomeSeq package.}
+\usage{
+deprecated_metagenomeSeq_function(x, value, ...)
+}
+\arguments{
+\item{x}{For assignment operators, the object that will undergo a replacement
+(object inside parenthesis).}
+
+\item{value}{For assignment operators, the value to replace with
+(the right side of the assignment).}
+
+\item{...}{For functions other than assignment operators,
+parameters to be passed to the modern version of the function (see table).}
+}
+\description{
+These functions may be removed completely in the next release.
+}
+
