@@ -83,7 +83,7 @@ Data is prepared and formatted as a \texttt{MRexperiment} object. For an overvie
 
 \subsection{Biom-Format}
 You can load in BIOM file format data, the output of many popular tools out there, using the \texttt{load$\_$biom} function. 
-Tthe \texttt{biom2MRexperiment} and \texttt{MRexperiment2biom} functions serve as a gateway between the \texttt{biom-class} object defined in the \textbf{biom} package and a texttt{MRexperiment-class} object. Currenlty, version 2.0 of the BIOM format is not supported.
+Tthe \texttt{biom2MRexperiment} and \texttt{MRexperiment2biom} functions serve as a gateway between the \texttt{biom-class} object defined in the \textbf{biom} package and a \texttt{MRexperiment-class} object. Currenlty, version 2.0 of the BIOM format is not supported. If you need to load a biom-2.0 file, see: https://gist.github.com/nosson/c9cdcb8cf95e7daae468.
 
 \subsection{Loading count data}
 Following preprocessing and annotation of sequencing data \texttt{metagenomeSeq} requires a count matrix with features along rows and samples along the columns.
@@ -376,12 +376,12 @@ For a description of how to perform a time-series / genome based analysis call t
 # vignette("fitTimeSeries")
 @
 
-\subsection{Metastats}
-Included is a standard permutation test similar to what was used in Metastats. Below we show the fit for the same model as above using 10 permutations providing p-value resolution to the tenth. The \texttt{coef} parameter refers to the coefficient of interest to test. Below we first generate the list of significant features.
+\subsection{Log Normal permutation test}
+Included is a standard log normal linear model with permutation based p-values permutation. We show the fit for the same model as above using 10 permutations providing p-value resolution to the tenth. The \texttt{coef} parameter refers to the coefficient of interest to test. We first generate the list of significant features.
 
 <<metastats>>=
 coeffOfInterest = 2
-res = fitMeta(obj = lungTrim, mod = mod, useCSSoffset = FALSE, B = 10, coef = coeffOfInterest)
+res = fitLogNormal(obj = lungTrim, mod = mod, useCSSoffset = FALSE, B = 10, coef = coeffOfInterest)
 
 # extract p.values and adjust for multiple testing
 # res$p are the p-values calculated through permutation
