@@ -6,6 +6,7 @@ version 1.9.xx (2015)
 	+ Removed interactiveDisplay to namespace - moved to suggests
 	+ Fixed ordering of MRtable,MRfulltable first four columns
 	+ modified df estimated through responsibilities
+	+ renamed fitMeta to fitLogNormal - a more appropriate name
 version 1.7.xx (2014-05-07)
 	+ Added function plotBubble
 	+ Added parallel (multi-core) options to fitPA, fitDO
